--- a/index.html
+++ b/index.html
@@ -520,3 +520,389 @@
 
 </body>
 </html>
+    <!-- ABOUT -->
+    <section id="about">
+      <div class="sec-head">
+        <h2>About</h2>
+        <p>Professional background & mission</p>
+      </div>
+
+      <div class="grid">
+        <div class="panel col-8">
+          <h3>Professional Summary</h3>
+          <p>
+            I am an AI Automation Specialist and Central Site Operations professional with 
+            11+ years of experience at <strong>Lexmark Research & Development Corporation</strong>. 
+            My work spans Microsoft Copilot agent development, CRM workflow design, QA testing, 
+            customer operations, reporting, and enterprise data management.
+          </p>
+          <p>
+            I specialize in transforming manual, repetitive work into intelligent automated workflows — 
+            from generating Excel templates for high-volume CRM ingestion to deploying AI summarization 
+            systems that reduce decision-making time for teams.
+          </p>
+          <p>
+            I bring expertise in problem-solving, cross-functional collaboration, operations management, 
+            and technical execution across automation, testing, and customer-facing service environments.
+          </p>
+        </div>
+
+        <div class="panel col-4">
+          <h3>Core Strengths</h3>
+          <p>
+            • AI Workflow Automation<br/>
+            • Microsoft Copilot Agent Design<br/>
+            • Manual & Automated Testing<br/>
+            • CRM Data Management<br/>
+            • Customer Operations<br/>
+            • Reporting & Documentation<br/>
+            • Cross-Functional Collaboration<br/>
+            • Enterprise Process Optimization
+          </p>
+        </div>
+      </div>
+    </section>
+
+
+    <!-- EXPERIENCE -->
+    <section id="experience">
+      <div class="sec-head">
+        <h2>Experience</h2>
+        <p>11+ years of enterprise experience</p>
+      </div>
+
+      <div class="grid">
+
+        <!-- FULL DETAIL: Lexmark CSOS -->
+        <div class="panel col-12">
+          <h3>Lexmark Research & Development Corporation</h3>
+          <p style="color:var(--muted);margin-top:-2px;">Full-time · 11 yrs 5 mos</p>
+
+          <div class="timeline">
+
+            <!-- CSOS -->
+            <div class="t-item">
+              <div class="t-when">Apr 2019 – Present</div>
+              <div class="t-what">
+                <strong>Central Site Operations Specialist</strong>
+                <span>
+                  Customer-facing role supporting Managed Services under the Client SOW. 
+                  Works with Customer Operations Managers, partners, and internal Lexmark teams 
+                  to execute steady-state services, escalate issues, deliver customer reports, 
+                  and ensure client satisfaction.
+                </span>
+                <span style="display:block;margin-top:6px;">
+                  Responsibilities include service delivery execution, escalation management, 
+                  operational reporting, data analysis, and being a key resource for resolving 
+                  business process and service issues.
+                </span>
+              </div>
+            </div>
+
+            <!-- Test Engineer -->
+            <div class="t-item">
+              <div class="t-when">Jul 2022 – May 2024</div>
+              <div class="t-what">
+                <strong>Test Engineer</strong>
+                <span>
+                  Designed functional, reliability, performance, security, and usability tests for 
+                  customer-facing functions. Performed requirements analysis, created and executed 
+                  test cases (manual & automated), tracked issues, automated test coverage, and built 
+                  risk mitigation strategies.
+                </span>
+              </div>
+            </div>
+
+            <!-- Asset & Invoicing -->
+            <div class="t-item">
+              <div class="t-when">Aug 2014 – Apr 2019</div>
+              <div class="t-what">
+                <strong>Asset Management & Invoicing Specialist</strong>
+                <span>
+                  Managed customer asset data in ARMS to ensure timely consumables delivery for MPS customers. 
+                  Generated accurate billing details, supported customer account rollouts, ensured contract 
+                  compliance, and consistently performed above KPI standards.
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- SUMMARY ROLES -->
+        <div class="panel col-12">
+          <h3>Earlier Professional Roles</h3>
+          <p>Condensed overview of earlier experience</p>
+
+          <div class="timeline">
+
+            <div class="t-item">
+              <div class="t-when">Nov 2009 – Jul 2014</div>
+              <div class="t-what">
+                <strong>Team Lead — Banking Operations · AEGIS People Support</strong>
+                <span>Led a team supporting a North American bank, handling financial inquiries and solutions.</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-when">Jun 2009 – Nov 2009</div>
+              <div class="t-what">
+                <strong>Customer Service Associate · Convergys</strong>
+                <span>Provided billing support, service upgrades, and mobile solutions.</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-when">Jan 2008 – Jun 2009</div>
+              <div class="t-what">
+                <strong>Technical Support Engineer · Sykes Asia</strong>
+                <span>Technical support for antivirus software; troubleshooting both hardware and software issues.</span>
+              </div>
+            </div>
+
+            <div class="t-item">
+              <div class="t-when">Aug 2007 – Nov 2007</div>
+              <div class="t-what">
+                <strong>Customer Service Representative · ePLDT Ventus</strong>
+                <span>Provided support for a US-based satellite TV provider through phone troubleshooting.</span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- EDUCATION -->
+    <section id="education">
+      <div class="sec-head">
+        <h2>Education</h2>
+        <p>Academic background</p>
+      </div>
+
+      <div class="grid">
+
+        <div class="panel col-6">
+          <h3>Mindanao State University</h3>
+          <span style="color:var(--muted);">Bachelor of Science in Electrical, Electronics & Communications Engineering</span>
+          <p style="margin-top:8px;">
+            <strong>Years:</strong> Jun 2001 – Nov 2006<br/>
+            <strong>CGPA:</strong> 1.74<br/>
+            <strong>Activities:</strong> KAPARIZ, JIECEP
+          </p>
+        </div>
+
+        <div class="panel col-6">
+          <h3>Galas National High School</h3>
+          <span style="color:var(--muted);">Secondary Education</span>
+          <p style="margin-top:8px;">
+            <strong>Years:</strong> Jun 1997 – Mar 2001<br/>
+            <strong>Honors:</strong> Salutatorian (2001)<br/>
+            <strong>Leadership:</strong> Battalion Commander (CAT), SSC President
+          </p>
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- PROJECTS -->
+    <section id="projects">
+      <div class="sec-head">
+        <h2>Projects</h2>
+        <p>Web applications & automation tools</p>
+      </div>
+
+      <div class="grid">
+
+        <article class="project col-6">
+          <h3>Expense Tracker (HTML) — Oct 2023 to Present</h3>
+          <p>
+            A lightweight web-based expense tracker capable of recording, editing, exporting, 
+            printing, and resetting expenses. Supports JSON export/import for multi-session use 
+            and can run standalone or embedded in other websites.
+          </p>
+          <div class="tags">
+            <span class="tag">HTML</span><span class="tag">CSS</span><span class="tag">JavaScript</span>
+          </div>
+        </article>
+
+        <article class="project col-6">
+          <h3>Online Cash Register — Oct 2023 to Present</h3>
+          <p>
+            A browser-based POS system supporting product lookup by 4-digit codes, cart 
+            management, invoice printing, cash handling, and session-based sales tracking. 
+            Automates register operations and updates cash-on-hand for subsequent sessions.
+          </p>
+          <div class="tags">
+            <span class="tag">Cash Management</span>
+            <span class="tag">Sales Tracking</span>
+            <span class="tag">JavaScript</span>
+          </div>
+        </article>
+
+      </div>
+    </section>
+
+
+    <!-- SKILLS -->
+    <section id="skills">
+      <div class="sec-head">
+        <h2>Skills</h2>
+        <p>Technical & professional competencies</p>
+      </div>
+
+      <div class="grid">
+
+        <div class="panel col-12">
+          <h3>Technical Skills</h3>
+          <p>
+            Microsoft Copilot • CRM Systems • Excel Automation • SQL • Google BigQuery • 
+            Firebase • Web Applications • Testing (Manual & Automated) • Reporting • Documentation
+          </p>
+        </div>
+
+      </div>
+    </section>
+
+
+    <!-- AWARDS -->
+    <section id="awards">
+      <div class="sec-head">
+        <h2>Awards & Achievements</h2>
+        <p>Recognition & certifications</p>
+      </div>
+
+      <div class="grid">
+        <div class="panel col-12">
+          <h3>Top Tester, CrowdTesters Worldwide</h3>
+          <p style="color:var(--muted);">Issued by Global App Testing · Sep 2019</p>
+
+          <h3 style="margin-top:20px;">Tester, Silver Badge</h3>
+          <p style="color:var(--muted);">Issued by UTest · Apr 2018</p>
+        </div>
+      </div>
+    </section>
+    <!-- CONTACT -->
+    <section id="contact">
+      <div class="sec-head">
+        <h2>Contact</h2>
+        <p>Get in touch</p>
+      </div>
+
+      <div class="grid">
+        <div class="panel col-6">
+          <h3>Send a message</h3>
+          <form id="contactForm">
+            <div class="row">
+              <div>
+                <label for="name">Name</label>
+                <input id="name" name="name" required placeholder="Your name" />
+              </div>
+
+              <div>
+                <label for="email">Email</label>
+                <input id="email" name="email" type="email" required placeholder="your@email.com" />
+              </div>
+            </div>
+
+            <div>
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required placeholder="Your message here..."></textarea>
+            </div>
+
+            <button class="btn primary" type="submit">Send Message</button>
+            <p id="formHint" class="sr-only" aria-live="polite"></p>
+          </form>
+        </div>
+
+        <div class="panel col-6">
+          <h3>Other ways</h3>
+          <p>
+            <a class="link" href="mailto:ytaniosxr@gmail.com">Email</a>
+            <a class="link" href="https://www.linkedin.com/in/itan8888" target="_blank">LinkedIn</a>
+            <a class="link" href="https://github.com/" target="_blank">GitHub</a>
+          </p>
+        </div>
+      </div>
+
+      <div class="footer">
+        <span>© <span id="year"></span> Jonathan Zamoras</span>
+        <span style="font-family:var(--mono)">Built with HTML • CSS • JavaScript</span>
+      </div>
+    </section>
+  </main>
+
+
+  <!-- FULL CSS (unchanged from base version) -->
+  <style>
+    /* Root vars already included in earlier part — this only includes needed additional CSS */
+    .link {
+      text-decoration:none;
+      font-size:13px;
+      color:var(--text);
+      border:1px solid var(--border);
+      padding:8px 10px;
+      border-radius:12px;
+      background:rgba(255,255,255,.04);
+      transition:.18s transform,.18s background,.18s border-color;
+      display:inline-flex;
+      gap:8px;
+      align-items:center;
+      margin-right:6px;
+    }
+    .link:hover {
+      transform:translateY(-1px);
+      background:rgba(52,211,153,.12);
+      border-color:rgba(52,211,153,.38)
+    }
+  </style>
+
+
+  <!-- JAVASCRIPT -->
+  <script>
+    // Theme toggle
+    const themeBtn = document.getElementById("themeBtn");
+    const root = document.body;
+
+    const saved = localStorage.getItem("portfolio_theme");
+    if (saved === "light" || saved === "dark") root.dataset.theme = saved;
+
+    function syncThemeButton() {
+      const isLight = root.dataset.theme === "light";
+      themeBtn.textContent = isLight ? "🌞" : "🌙";
+    }
+    syncThemeButton();
+
+    themeBtn.addEventListener("click", () => {
+      root.dataset.theme = root.dataset.theme === "light" ? "dark" : "light";
+      localStorage.setItem("portfolio_theme", root.dataset.theme);
+      syncThemeButton();
+    });
+
+    // Contact Form Mailto
+    const form = document.getElementById("contactForm");
+    const hint = document.getElementById("formHint");
+
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      const name = document.getElementById("name").value.trim();
+      const email = document.getElementById("email").value.trim();
+      const msg = document.getElementById("message").value.trim();
+
+      const subject = encodeURIComponent(`Message from ${name}`);
+      const body = encodeURIComponent(`From: ${name} (${email})\n\n${msg}`);
+
+      const to = "ytaniosxr@gmail.com";
+
+      hint.textContent = "Opening your email app…";
+      window.location.href = `mailto:${to}?subject=${subject}&body=${body}`;
+    });
+
+    document.getElementById("year").textContent = String(new Date().getFullYear());
+  </script>
+
+</body>
+</html>
